Fix underline alignment

--- a/site.scss
+++ b/site.scss
@@ -111,7 +111,7 @@ a {
   text-decoration: none;
   color: inherit;
   display: inline-block;
-  line-height: 1.2em;
+  line-height: 1.25em;
   border-bottom: 0.1em solid transparent;
   
   &:active, &:hover {
@@ -141,10 +141,9 @@ a {
     border-bottom-color: #900;
   }
   &.link-cards {
+    border-bottom-color: #000;
     & > span {
-      @extend a;
-      display: inline;
-      border-bottom: 0.1em solid #000;
+      border-bottom: 0.1em solid transparent;
     }
     &:hover > span {
       border-bottom-width: 0.15em;
